# Detection_formes

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Combine.h  Distance.h  Extractor.h  Kppv.h  Mlp.h  Neurone.h  Parzen.h  kppv.h
src/: Combine.cpp  Distance.cpp  Extractor.cpp  Kppv.cpp  Mlp.cpp  Neurone.cpp  Parzen.cpp  kppv.cpp
